--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                     <img src="./Screenshot (3).png" alt="Calculator Project">
                     <div class="project-overlay">
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://calculator-basic-css-js.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Priyadharshini2005dev/calculator-html-css-js/tree/main/Calculator%20project" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -271,8 +271,8 @@
                     <img src="./netflix.png" alt="Netflix Signin Page">
                     <div class="project-overlay">
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://github.com/Priyadharshini2005dev/sign-in-page-design-recreation" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://signinpage-recreate.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Priyadharshini2005dev/netflix-sign-in-page-recreation/tree/main/netflixsigninpage" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
