--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Priyadharshini D | Full Stack Developer Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 </head>
@@ -23,15 +23,14 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
-                <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#Myjourney" class="nav-link">My Journey</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <div class="nav-toggle" id="nav-toggle">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <div id="nav-toggle" class="toggle-icon">
+                 <span></span>
+                 <span></span>
+                <span></span>
             </div>
         </div>
     </nav>
@@ -45,25 +44,24 @@
                         <span class="greeting">Hello, I'm</span>
                         <span class="name">Priyadharshini D</span>
                     </h1>
-                    <p class="hero-subtitle">Full Stack Developer</p>
+                    <p class="hero-subtitle">Full Stack / Web Developer</p>
                     <p class="hero-description">
                         I create amazing digital experiences that combine beautiful design 
                         with powerful functionality. Let's build something incredible together.
                     </p>
                     <div class="hero-buttons">
-                        <a href="./PRIYADHARSHINIResume.pdf" class="btn btn-primary">Resume</a>
+                        <a href="./Resume.pdf" class="btn btn-primary">Resume</a>
                         <a href="#contact" class="btn btn-primary">Get In Touch</a>
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/Priyadharshini2005dev" target="_blank" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/priyadharshini-d0/" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://twitter.com/" target="_blank" class="social-link"><i class="fab fa-twitter"></i></a>
                         <a href="mailto:priyadharshini0d@gmail.com" class="social-link"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <img src="./Gemini_Generated_Image_hj07azhj07azhj07.png" alt="Priya Dharshini" class="profile-image">
+                        <img src="./profile.png" alt="Priya Dharshini" class="profile-image">
                         <!-- <div class="image-decoration"></div> -->
                     </div>
                 </div>
@@ -187,37 +185,6 @@
 
         </div> 
     </section>
-<!-- Experience Section -->
-<section id="experience" class="experience">
-    <div class="container" >
-        <div class="section-header">
-            <h2 class="section-title">Experience</h2>
-            <p class="section-subtitle">Where I've worked and what I've achieved</p>
-        </div>
-        <div class="experience-content">
-            <div class="experience-item">
-                <div class="experience-icon">
-                    <i class="fas fa-briefcase"></i>
-                </div>
-                <div class="experience-details">
-                    <h3>Full Stack Developer</h3>
-                    <span class="experience-company">Profenaa Infotech, Pollachi</span>
-                    <span class="experience-date">2025 – Present</span>
-                    <ul class="experience-tasks">
-                        <li>Developed and maintained responsive web applications using HTML, CSS, JavaScript, React, Node.js, and Express frameworks.</li>
-                        <li>Built RESTful APIs and integrated third-party services to enhance application functionality.</li>
-                        <li>Optimized codebase for performance, reducing load time by 15%.</li>
-                        <li>Collaborated with cross-functional teams to gather requirements, design solutions, and ensure timely delivery of projects.</li>
-                        <li>Deployed applications on cloud platforms and monitored performance for continuous improvement.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="experience-logo">
-                    <img src="./profenaa image.jfif" alt="Profenaa Infotech Logo">
-                </div>
-        </div>
-    </div>
-</section>
 
 <!-- project section -->
 <section  id="projects">
@@ -228,6 +195,24 @@
         </div>
         <div class="projects-grid">
             <!-- Project 1 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="./Screenshot (21).png" alt="Fitness Project">
+                    <div class="project-overlay">
+                        <div class="project-links">
+                            <a href="https://fitlifegym-html.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Priyadharshini2005dev/FitLifeGym" class="project-link"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">FitLifeGym</h3>
+                    <p class="project-description">
+                        A responsive gym website built with HTML and CSS featuring modern design, smooth navigation, and user-friendly layouts.
+                    </p>
+                </div>
+            </div>
+            <!-- Project 2 -->
             <div class="project-card">
                 <div class="project-image">
                     <img src="./Screenshot (3).png" alt="Calculator Project">
@@ -246,26 +231,26 @@
                 </div>
             </div>
 
-            <!-- Project 2 -->
+            <!-- Project 3 -->
             <div class="project-card">
                 <div class="project-image">
                     <img src="./zudioproject.png" alt="Zudio Website Recreation">
                     <div class="project-overlay">
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://zudio-recreate-html-css.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Priyadharshini2005dev/zudio-recreate-html-css" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Zudio Website Recreation</h3>
                     <p class="project-description">
-                        Recreation of the Zudio online shopping platform using HTML and CSS.
+                        Recreation of the Zudio online shopping platform design using HTML and CSS.
                     </p>
                 </div>
             </div>
 
-            <!-- Project 3 -->
+            <!-- Project 4 -->
             <div class="project-card">
                 <div class="project-image">
                     <img src="./netflix.png" alt="Netflix Signin Page">
@@ -280,6 +265,24 @@
                     <h3 class="project-title">Netflix Signin Page</h3>
                     <p class="project-description">
                         A responsive sign-in page mimicking Netflix’s style using HTML, CSS, and JavaScript validations.
+                    </p>
+                </div>
+            </div>
+            <!-- Project 5 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="./Screenshot (22).png" alt="Movie search api">
+                    <div class="project-overlay">
+                        <div class="project-links">
+                            <a href="https://moviesearchapi-html-css-js.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Priyadharshini2005dev/moviesearchapi" class="project-link"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Netflix Signin Page</h3>
+                    <p class="project-description">
+                         A movie search website built with HTML, CSS, and JavaScript that fetches real-time movie data using an external API.
                     </p>
                 </div>
             </div>
@@ -421,7 +424,7 @@
         </div>
     </footer>
 
-    <script src="script.js">
+    <script src="portfolio.js">
         
 
     </script>
@@ -457,6 +460,13 @@
             });
         });
     </script>
+
+    <script src="https://cdn.emailjs.com/sdk/3.11.0/email.min.js"></script>
+        <script>
+            (function(){
+                emailjs.init("G3xQHe_hVaajBsoPK");
+            })();
+            </script>
 
 </body>
 </html>
