--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         with powerful functionality. Let's build something incredible together.
                     </p>
                     <div class="hero-buttons">
-                        <a href="./Resume.pdf" class="btn btn-primary">Resume</a>
+                        <a href="./resume.pdf" class="btn btn-primary">Resume</a>
                         <a href="#contact" class="btn btn-primary">Get In Touch</a>
                     </div>
                     <div class="social-links">
